[gd_scene load_steps=10 format=3 uid="uid://nifofmv4xqni"]

[ext_resource type="Script" path="res://UI/Map/power_pole_selection_map.gd" id="1_7xxns"]
[ext_resource type="PackedScene" uid="uid://dqwwtsntni62j" path="res://Components/MapDisplay/map_display.tscn" id="1_j181k"]
[ext_resource type="Script" path="res://GenericClasses/MapData/map_entity.gd" id="2_j7ojo"]
[ext_resource type="PackedScene" uid="uid://sm5rnfdhpnwf" path="res://UI/Map/MapScenes/SelectablePowerPole/selectable_power_pole.tscn" id="3_eae6r"]
[ext_resource type="Script" path="res://GenericClasses/MapData/map_data.gd" id="3_v31ju"]
[ext_resource type="Script" path="res://GenericClasses/MapData/selectable_power_pole_map_entity.gd" id="4_psm4t"]

[sub_resource type="Resource" id="Resource_3jtqu"]
script = ExtResource("4_psm4t")
initial_position = Vector2(100, 100)
packed_scene = ExtResource("3_eae6r")

[sub_resource type="Resource" id="Resource_v0bhd"]
script = ExtResource("4_psm4t")
initial_position = Vector2(-100, -100)
packed_scene = ExtResource("3_eae6r")

[sub_resource type="Resource" id="Resource_ku4rn"]
script = ExtResource("3_v31ju")
use_exported_initial_values = true
initial_map_entities = Array[ExtResource("2_j7ojo")]([SubResource("Resource_3jtqu"), SubResource("Resource_v0bhd")])
initial_solidity_polygons = Array[PackedVector2Array]([])
initial_bounding_box = Rect2(-40, -40, 160, 80)

[node name="PowerPoleSelectionMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xxns")
map_data = SubResource("Resource_ku4rn")

[node name="ContentDivider" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapDisplay" parent="ContentDivider" instance=ExtResource("1_j181k")]
layout_mode = 2
size_flags_vertical = 3

[node name="ConfirmMargin" type="MarginContainer" parent="ContentDivider"]
layout_mode = 2
theme_override_constants/margin_left = 360
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 360
theme_override_constants/margin_bottom = 20

[node name="ConfirmButton" type="Button" parent="ContentDivider/ConfirmMargin"]
layout_mode = 2
disabled = true
text = "Confirm"

[connection signal="map_changed" from="ContentDivider/MapDisplay" to="." method="_on_map_display_map_changed"]
[connection signal="pressed" from="ContentDivider/ConfirmMargin/ConfirmButton" to="." method="_on_confirm_button_pressed"]
